extra_eans.txt
  File "<string>", line 28
    print(f'  {ean} | {row[\
                          ^
SyntaxError: '[' was never closed
